--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "config": "^3.3.7",
     "express": "^4.17.1",
     "mongodb": "^3.6.4",
     "node": "^16.4.0"
